--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^5.0.0-beta3",
     "date-fns": "^2.25.0",
     "mongoose": "^6.1.2",
-    "next": "11.1.2",
+    "next": "^11.1.4",
     "next-auth": "^3.29.0",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
