--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "^3.6.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.0.0-beta3",
     "date-fns": "^2.25.0",
     "mongoose": "^6.1.2",
     "next": "^11.1.4",
     "next-auth": "^3.29.0",
+    "next-remove-imports": "^1.0.6",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.6.1",
     "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.18.1",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "eslint": "8.1.0",
