--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.18.1",
+    "react-showdown": "^2.3.1",
     "react-toastify": "^8.1.0",
     "typescript": "^4.5.5"
   },
